--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">ProfileViewSample</string>
+    <string name="personal_data">Datos de mi perfil</string>
+    <string name="cedula">Cédula</string>
+    <string name="name">Nombre</string>
+    <string name="last_name">Apellido</string>
+    <string name="email">Correo</string>
+    <string name="age">Edad</string>
+    <string name="city">Ciudad</string>
+    <string name="phone">Celular</string>
+    <string name="button_title">Completar datos</string>
+
 </resources>
